# container-per-ip

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  docker-publish.yml  push.yml
src/: connections.rs  container.rs  container_connection.rs  container_mgmt.rs  coordinator.rs  create_connection.rs  listener.rs  main.rs  port.rs  single_consumer.rs  timeout_queue.rs  utils.rs
