[package]
name = "container-per-ip"
version = "0.1.3"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

[[bin]]
name = "container-per-ip"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["time"] }
structopt = "0.3.21"
snafu = "0.6.10"
log = "0.4.14"
futures = "0.3.13"
lazy_static = "1.4.0"
multi-map = "1.3.0"
flexi_logger = "0.17.1"
ctrlc = "3.1.8"
pin-utils = "0.1.0"
bollard = "0.10.1"
