[package]
name = "container-per-ip"
version = "0.2.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

[[bin]]
name = "container-per-ip"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3.24"
flexi_logger = "0.23.3"
ctrlc = "3.2.3"
bollard = "0.13.0"
miette = { version = "5.3.0", features = ["fancy"] }
thiserror = "1.0.35"
clap = { version = "3.2.22", features = ["derive"] }
tracing = { version = "0.1.36", features = ["async-await"] }
once_cell = "1.14.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-error = "0.2.0"
futures-delay-queue = { version = "0.5.2", default-features = false, features = ["tokio", "use-tokio"] }
double-map = "0.14.0"
in-container = { version = "1.1.0", default-features = false }
