[package]
name = "container-per-ip"
version = "0.4.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2021"

[[bin]]
name = "container-per-ip"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
futures = "0.3.24"
bollard = "0.15.0"
miette = { version = "5.3.0", features = ["fancy"] }
thiserror = "1.0.35"
clap = { version = "4.4.6", features = ["derive"] }
tracing = { version = "0.1.36", features = ["async-await"] }
once_cell = "1.14.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-error = "0.2.0"
double-map = "0.14.0"
in-container = { version = "1.1.0", default-features = false }
uuid = { version = "1.1.2", features = ["v4"] }
chumsky = "0.9.2"
itertools = "0.11.0"
udpflow = "0.1.0"
async-trait = "0.1.57"
coerce = { version = "0.8.11", features = ["tracing-unstable"] }
abort-on-drop = "0.2.2"
